# dress-graph

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  clean.sh  mkdocs.yml  publish.sh  run_examples.sh  run_tests.sh  set_version.sh  setup_env.sh
.github/workflows/: build_wheels.yml  docs.yml
conda/: meta.yaml
docs/: benchmarks.md  index.md  publications.md
docs/applications/: classification.md  community-detection.md  dress-gnns.md  edge-robustness.md  ged-regression.md  isomorphism.md  overview.md  research-directions.md  retrieval.md
docs/getting-started/: api.md  installation.md  quickstart.md
docs/theory/: delta-ell-dress.md  equation.md  family.md  nabla-k-dress.md  properties.md  self-loop.md  weights.md
examples/c/: cpu.c  cpu_igraph.c  cuda.c  cuda_igraph.c  mpi.c  mpi_cuda.c  mpi_cuda_igraph.c  mpi_igraph.c  mpi_omp.c  mpi_omp_igraph.c  omp.c  omp_igraph.c
examples/cpp/: cpu.cpp  cuda.cpp  mpi.cpp  mpi_cuda.cpp  mpi_omp.cpp  omp.cpp
examples/go/: cpu.go  cpu_oo.go  cuda.go  cuda_oo.go  go.mod  mpi.go  mpi_cuda.go  mpi_cuda_oo.go  mpi_omp.go  mpi_omp_oo.go  mpi_oo.go  omp.go  omp_oo.go
examples/julia/: cpu.jl  cpu_oo.jl  cuda.jl  cuda_oo.jl  mpi.jl  mpi_cuda.jl  mpi_cuda_oo.jl  mpi_omp.jl  mpi_omp_oo.jl  mpi_oo.jl  omp.jl  omp_oo.jl
examples/matlab/: cpu_oo.m  cuda_oo.m  mpi_cuda_oo.m  mpi_omp_oo.m  mpi_oo.m  omp_oo.m
examples/octave/: cpu.m  cpu_oo.m  cuda_example.m  mpi_cuda_oo.m  mpi_omp_oo.m  mpi_oo.m  octave-workspace  omp_example.m  rook_vs_shrikhande.m
examples/python/: cpu.py  cpu_nx.py  cpu_oo.py  cuda.py  cuda_nx.py  cuda_oo.py  mpi.py  mpi_cuda.py  mpi_cuda_nx.py  mpi_cuda_oo.py  mpi_nx.py  mpi_omp.py  mpi_omp_nx.py  mpi_omp_oo.py  mpi_oo.py  omp.py  omp_nx.py  omp_oo.py
examples/r/: cpu.R  cpu_oo.R  cuda.R  cuda_oo.R  mpi.R  mpi_cuda.R  mpi_cuda_oo.R  mpi_omp.R  mpi_omp_oo.R  mpi_oo.R  omp.R  omp_oo.R
examples/rust/: Cargo.toml  cpu.rs  cpu_oo.rs  cuda.rs  cuda_oo.rs  mpi.rs  mpi_cuda.rs  mpi_cuda_oo.rs  mpi_omp.rs  mpi_omp_oo.rs  mpi_oo.rs  omp.rs  omp_oo.rs
examples/wasm/: cpu.mjs  cpu_oo.mjs  rook_vs_shrikhande.mjs
go/: README.md  dress.go  dress_cgo.c  go.mod
go/cuda/: dress.go  dress_cgo.c  go.mod
go/mpi/: dress.go  dress_cgo.c  go.mod
go/omp/: dress.go  dress_cgo.c  go.mod
julia/: Project.toml  README.md
julia/src/: CUDA.jl  DRESS.jl  MPI.jl  MPI_CUDA.jl  MPI_OMP.jl  OMP.jl
libdress/: CMakeLists.txt
libdress++/: CMakeLists.txt
libdress++/include/dress/: dress.hpp
libdress++/include/dress/cuda/: dress.hpp
libdress++/include/dress/mpi/: dress.hpp
libdress++/include/dress/mpi/cuda/: dress.hpp
libdress++/include/dress/mpi/omp/: dress.hpp
libdress++/include/dress/omp/: dress.hpp
libdress-igraph/: CMakeLists.txt
libdress-igraph/include/: dress_igraph.h
libdress-igraph/include/cuda/: dress_igraph.h
libdress-igraph/include/dress/cuda/igraph/: dress.h
libdress-igraph/include/dress/igraph/: dress.h
libdress-igraph/include/dress/mpi/cuda/igraph/: dress.h
libdress-igraph/include/dress/mpi/igraph/: dress.h
libdress-igraph/include/dress/mpi/omp/igraph/: dress.h
libdress-igraph/include/dress/omp/igraph/: dress.h
libdress-igraph/include/mpi/: dress_igraph.h
libdress-igraph/include/mpi/cuda/: dress_igraph.h
libdress-igraph/src/: dress_igraph.c  dress_igraph_mpi.c
libdress/include/dress/: delta_dress.h  dress.h  nabla_dress.h
libdress/include/dress/cuda/: dress.h  dress_cuda.h
libdress/include/dress/mpi/: dress.h  dress_mpi.h
libdress/include/dress/mpi/cuda/: dress.h
libdress/include/dress/mpi/omp/: dress.h
libdress/include/dress/omp/: dress_omp.h
libdress/src/: delta_dress.c  delta_dress_impl.c  delta_dress_impl.h  dress.c  nabla_dress_impl.c  nabla_dress_impl.h
libdress/src/cuda/: Makefile  delta_dress_cuda.c  dress_cuda.cu  test_dress_cuda  test_dress_cuda.c
libdress/src/mpi/: dress_mpi.c
libdress/src/omp/: delta_dress_omp.c  dress_omp.c  nabla_dress_omp.c
matlab/: Contents.m  DRESS.m  README.md  delta_dress_cuda_mex.c  delta_dress_fit.m  delta_dress_mex.c  delta_dress_mpi_cuda_obj_mex.c  delta_dress_mpi_obj_mex.c  delta_dress_omp_mex.c  delta_fit.m  dress_build.m  dress_cuda_mex.c  dress_fit.m  dress_fit_cuda_obj_mex.c  dress_fit_obj_mex.c  dress_free_mex.c  dress_get_mex.c  dress_init_mex.c  dress_mex.c  dress_omp_mex.c  dress_result_mex.c  dress_to_table.m  fit.m  nabla_dress_cuda_mex.c  nabla_dress_fit.m  nabla_dress_mex.c  nabla_dress_omp_mex.c  nabla_fit.m
matlab/+cuda/: Contents.m  DRESS.m  delta_dress_fit.m  delta_fit.m  dress_fit.m  fit.m  nabla_fit.m
matlab/+mpi/: Contents.m  DRESS.m  delta_fit.m  nabla_fit.m
matlab/+omp/: DRESS.m  delta_fit.m  fit.m  nabla_fit.m
notebooks/: delta_dress_rook_shrikhande.ipynb  prism_vs_k33.ipynb  quickstart.ipynb
octave/: DESCRIPTION  INDEX  PKG_ADD  PKG_DEL  README.md
octave/src/: Makefile
python/: CMakeLists.txt  MANIFEST.in  README.md  _nabla_dress.c  pyproject.toml  setup.py
python/bindings/: dress_pybind11.cpp
python/src/dress/: __init__.py  _ctypes_helpers.py  core.py  networkx.py
python/src/dress/cuda/: __init__.py  networkx.py
python/src/dress/mpi/: __init__.py  networkx.py
python/src/dress/mpi/cuda/: __init__.py  networkx.py
python/src/dress/mpi/omp/: __init__.py  networkx.py
python/src/dress/omp/: __init__.py  networkx.py
r/: DESCRIPTION  LICENSE  NAMESPACE  README.md  configure
r/R/: cuda.R  dress.R  mpi.R  omp.R
r/man/: DRESS.Rd  cuda.Rd  delta_dress_fit.Rd  delta_fit.Rd  dress_fit.Rd  fit.Rd  mpi.Rd  nabla_dress_fit.Rd  nabla_fit.Rd
r/src/: Makevars  Makevars.win  dress_cuda_r.c  dress_mpi_r.c  dress_omp_r.c  dress_r.c
research/: delta-k-DRESS.tex  delta1-dress-hard-families.tex  k-DRESS.tex  refs.bib  vertex-k-DRESS.tex
rust/: Cargo.toml  README.md  build.rs
rust/src/: cuda.rs  lib.rs  mpi.rs  omp.rs
tests/c/: test_delta_dress.c  test_delta_dress_igraph.c  test_dress.c  test_dress_igraph.c
vcpkg/: portfile.cmake  vcpkg.json
wasm/: README.md  build.sh  dress.d.ts  dress.js  index.html  package.json
(+38 files in other folders)
