[build-system]
requires = ["setuptools>=45", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "dress-graph"
version = "0.4.0"
description = "DRESS is a deterministic, parameter-free framework that iteratively refines the structural similarity of edges in a graph to produce a canonical fingerprint: a real-valued edge vector, obtained by converging a non-linear dynamical system to its unique fixed point. The fingerprint is isomorphism-invariant by construction, numerically stable (no overflow, no error amplification, no undefined behavior), fast and embarrassingly parallel to compute: DRESS total runtime is O(I * m * d_max) for I iterations to convergence, and convergence is guaranteed by Birkhoff contraction."
authors = [{name = "Eduar Castrillo Velilla"}]
maintainers = [{name = "Eduar Castrillo Velilla"}]
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["graph", "similarity", "community-detection", "isomorphism", "link-prediction", "network-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/velicast/dress-graph"
Documentation = "https://velicast.github.io/dress-graph/"
Repository = "https://github.com/velicast/dress-graph"

[project.optional-dependencies]
native = ["pybind11>=2.6", "numpy"]
networkx = ["networkx"]
cuda = ["nvidia-cuda-runtime-cu12"]

[tool.setuptools.packages.find]
where = ["src"]
