[build-system]
requires = ["setuptools>=45", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "dress-graph"
version = "0.8.1"
description = "DRESS is a deterministic, parameter-free framework for continuous structural graph refinement. It iterates a nonlinear dynamical system on real-valued edge similarities and produces a graph fingerprint as a sorted edge-value vector once the iteration reaches a prescribed stopping criterion."
authors = [{name = "Eduar Castrillo Velilla"}]
maintainers = [{name = "Eduar Castrillo Velilla"}]
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["graph", "similarity", "community-detection", "isomorphism", "link-prediction", "network-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/velicast/dress-graph"
Documentation = "https://velicast.github.io/dress-graph/"
Repository = "https://github.com/velicast/dress-graph"

[project.optional-dependencies]
native = ["pybind11>=2.6", "numpy"]
networkx = ["networkx"]
cuda = ["nvidia-cuda-runtime-cu12"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dress._vendored" = ["**/*.c", "**/*.h", "**/*.hpp", "**/*.cu"]
