[package]
name    = "dress-graph"
version = "0.3.1"
edition = "2021"
authors = ["Eduar Castrillo Velilla <https://orcid.org/0009-0005-2492-0957>"]
license = "MIT"
description = "DRESS is a deterministic, parameter-free framework that iteratively refines the structural similarity of edges in a graph to produce a canonical fingerprint: a real-valued edge vector, obtained by converging a non-linear dynamical system to its unique fixed point. The fingerprint is isomorphism-invariant by construction, numerically stable, fast and embarrassingly parallel to compute: each iteration costs O(m * d_max) and convergence is guaranteed by Birkhoff contraction. As a direct consequence of these properties, DRESS is provably at least as expressive as the 2-dimensional Weisfeiler-Leman (2-WL) test, at a fraction of the cost (O(m * d_max) vs. O(n^3) per iteration)."
repository  = "https://github.com/velicast/dress-graph"
keywords    = ["graph", "similarity", "community-detection", "isomorphism", "network"]
categories  = ["algorithms", "science"]
include     = ["src/**", "vendor/**", "build.rs", "Cargo.toml", "LICENSE"]

[lib]
name = "dress_graph"
path = "src/lib.rs"

[build-dependencies]
cc = "1"
