[package]
name    = "dress-graph"
version = "0.5.2"
edition = "2021"
authors = ["Eduar Castrillo Velilla <https://orcid.org/0009-0005-2492-0957>"]
license = "MIT"
description = "DRESS is a deterministic, parameter-free framework that iteratively refines the structural similarity of edges in a graph to produce a canonical fingerprint: a real-valued edge vector, obtained by converging a non-linear dynamical system to its unique fixed point. The fingerprint is isomorphism-invariant by construction, numerically stable (no overflow, no error amplification, no undefined behavior), fast and embarrassingly parallel to compute: DRESS total runtime is O(I * m * d_max) for I iterations to convergence, and convergence is guaranteed by Birkhoff contraction."
repository  = "https://github.com/velicast/dress-graph"
keywords    = ["graph", "similarity", "community-detection", "isomorphism", "network"]
categories  = ["algorithms", "science"]
include     = ["src/**", "vendor/**", "build.rs", "Cargo.toml", "LICENSE"]

[features]
cuda = []
mpi = ["dep:mpi"]

[lib]
name = "dress_graph"
path = "src/lib.rs"

[build-dependencies]
cc = "1"

[dependencies]
mpi = { version = "0.8", optional = true }
