[package]
name    = "dress-graph"
version = "0.8.1"
edition = "2021"
authors = ["Eduar Castrillo Velilla <https://orcid.org/0009-0005-2492-0957>"]
license = "MIT"
description = "DRESS is a deterministic, parameter-free framework for continuous structural graph refinement. It iterates a nonlinear dynamical system on real-valued edge similarities and produces a graph fingerprint as a sorted edge-value vector once the iteration reaches a prescribed stopping criterion."
repository  = "https://github.com/velicast/dress-graph"
keywords    = ["graph", "similarity", "community-detection", "isomorphism", "network"]
categories  = ["algorithms", "science"]
include     = ["src/**", "vendor/**", "build.rs", "Cargo.toml", "LICENSE"]

[features]
cuda = []
omp = []
mpi = ["dep:mpi"]

[lib]
name = "dress_graph"
path = "src/lib.rs"

[build-dependencies]
cc = "1"

[dependencies]
mpi = { version = "0.8", optional = true }
